                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 21-12-2005 fixed: GUI Calibration screen was constantly allocating/deallocating it's resources.
 - 21-12-2005 changed: Moved resume time saving into the application class.
 - 21-12-2005 changed: Better solution for genre problem in libid3tag.dll.
 - 21-12-2005 added: Support for treating stacked files as a single volume. Set "Bypass CD Selection" to "Immediately" to test.
 - 21-12-2005 added: Selecting a file from the FileBrowser dialog is equivalent to pressing "Ok".
 - 21-12-2005 changed: improved seeking accuracy in dvdplayer. ( fixed libdvdnav.dll time_search to use time map in dvd )
 - 21-12-2005 fixed: dvdplayer could stall on rewind due to full audio buffer
 - 21-12-2005 fixed: Thumbpanel highlighting wasn't working correctly.
 - 20-12-2005 fixed: some menu overlays did not display properly or not at all in the dvdplayer
 - 19-12-2005 changed: tuned FF/RW for dvdplayer (only enabled in debug builds)
 - 19-12-2005 fixed/changed: dvdplayer reported wrong total time for movie / dvdplayer now uses libdvdnav's time seek for seeking
 - 19-12-2005 fixed: [ 1378710 ] DVDplayer crash when swithing from fullscreen to thumbnail 
 - 18-12-2005 fixed: potential deadlock when using ffmpeg demuxer in dvdplayer and it returns a negative package size
 - 18-12-2005 fixed: ID3 genres were being incorrectly returned as "Blues".
 - 18-12-2005 fixed: MP3 files with more than one ID3v2 tag at the beginning would fail to play.
 - 18-12-2005 fixed: M3U reading could buffer overflow in the charset conversion.
 - 18-12-2005 added: HttpApi FileSize and SetResponseFormat commands
 - 17-12-2005 added: SmartXX V3 LCD , RGB&Status LED Support