@@ -35,6 +35,7 @@ bool CDVDInputStreamHttp::Open(const char* strFile)
     m_pFile = NULL;
     return false;
   }
+  m_bEOF = false;
 
   return true;
 }
@@ -51,6 +52,7 @@ void CDVDInputStreamHttp::Close()
   
   CDVDInputStream::Close();
   m_pFile = NULL;
+  m_bEOF = true;
 }
 
 int CDVDInputStreamHttp::Read(BYTE* buf, int buf_size)
@@ -58,6 +60,11 @@ int CDVDInputStreamHttp::Read(BYTE* buf, int buf_size)
   int ret = 0;
   if (m_pFile) ret = m_pFile->Read(buf, buf_size);
   else return -1;
+
+  if( ret <= 0 ) {
+    if( m_pFile->GetPosition() >= m_pFile->GetLength() ) 
+      m_bEOF = true;
+  }
 
   return (int)(ret & 0xFFFFFFFF);
 }
